Fix layout issue in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media (max-width: 800px) {
+  img {
+    width: 100%
+  }
+}
